syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

enum McsClaimType {
  CLAIM_TYPE_UNSET = 0;

  // ASCII 2
  CLAIM_TYPE_ADJUSTMENT = 50;

  // ASCII 3
  CLAIM_TYPE_MEDICAL = 51;
}
