syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

enum McsDiagnosisIcdType {
  DIAGNOSIS_ICD_TYPE_UNSET = 0;

  // ASCII 9
  DIAGNOSIS_ICD_TYPE_ICD9 = 57;

  // ASCII 0
  DIAGNOSIS_ICD_TYPE_ICD10 = 48;
}
